[package]
name = "protoc-prebuilt"
version = "0.2.0"
authors = ["Sergei Ivankov <sergeiivankov@pm.me>"]
edition = "2021"
description = "Protobuf compiler protoc pre-built binaries installer"
repository = "https://github.com/sergeiivankov/protoc-prebuilt"
license = "MIT"
keywords = ["protobuf", "protoc"]
categories = ["api-bindings", "development-tools::build-utils", "parsing"]
exclude = ["changelog.md"]

[dependencies]
ureq = { version = "2.6", default-features = false, features = ["tls"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
prost-build = { version = "0.11", default-features = true }
protobuf-codegen = "3.2"